fix horizontal scroll

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -214,7 +214,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     z-index: 0;
 }
@@ -223,7 +223,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background: repeating-linear-gradient(
         0deg,
